tests/fixtures/invalid/list_div_float.py
# Cannot divide List[int] and Float
x: float = [1, 2, 3] / 1.0
